Fix visual bug with overflowing image in Navigation container

--- a/src/stylesheets/Home.scss
+++ b/src/stylesheets/Home.scss
@@ -35,10 +35,12 @@ body {
 // ---------- NAVIGATION ---------- //
 // Navigation: Wrapper
 .header-wrapper {
-  border: dashed blue 1px;
+  border: dashed blue 2px;
   max-width: 800px;
   max-height: 400px;
+  overflow: hidden;
 }
+
 // Navigation: Bar Container
 .header-bar {
   display: flex;
@@ -84,6 +86,7 @@ body {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(3, 1fr);
+  // overflow: hidden;
 
   // Navigation: Hero Image (Container)
   .hero-image {
